--- a/index.html
+++ b/index.html
@@ -135,7 +135,9 @@
             <div class="col" style="--col-lg: 3; --col-md: 6">
               <div class="product-card">
                 <div class="product-card__img">
-                  <img src="public/assets/products/product1.png" alt="" />
+                  <a href="productdetail.html"
+                    ><img src="public/assets/products/product1.png" alt=""
+                  /></a>
                 </div>
                 <div class="product-card__info">
                   <div class="product-card__name">
@@ -211,7 +213,9 @@
           </div>
           <div class="seller__banner">
             <img src="./public/assets/products/Change Img.png" alt="" />
-            <div class="btn-sa btn-sa--large"><a href="#">Shop All</a></div>
+            <div class="btn-sa btn-sa--large">
+              <a href="showall.html">Shop All</a>
+            </div>
           </div>
         </div>
       </section>
