--- a/productdetail.html
+++ b/productdetail.html
@@ -11,6 +11,10 @@
       href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="app">
@@ -163,41 +167,275 @@
 
                 <div class="pi-options">
                   <div class="pi-options__group pi-options__group--device">
-                    <label class="pi-options__label">Select Device</label>
-                    <div class="pi-options__select">
-                      <select class="pi-options__dropdown">
-                        <option>Apple</option>
-                        <option>Samsung</option>
-                        <option>Google</option>
-                      </select>
-                    </div>
-                    <div class="pi-options__select">
-                      <select class="pi-options__dropdown">
-                        <option>Apple</option>
-                        <option>Samsung</option>
-                        <option>Google</option>
-                      </select>
+                    <label class="pi-options__label">SELECT DEVICE</label>
+                    <div class="pi-options__wrapper">
+                      <div class="pi-options__select">
+                        <select class="pi-options__dropdown">
+                          <option>Apple</option>
+                          <option>Samsung</option>
+                          <option>Google</option>
+                        </select>
+                      </div>
+                      <div class="pi-options__select">
+                        <select class="pi-options__dropdown">
+                          <option>Apple</option>
+                          <option>Samsung</option>
+                          <option>Google</option>
+                        </select>
+                      </div>
                     </div>
                   </div>
 
                   <div class="pi-options__group pi-options__group--color">
-                    <label class="pi-options__label">Select Color</label>
-                    <div class="pi-options__colors">
-                      <button
-                        class="pi-options__color pi-options__color--blue"
-                      ></button>
-                      <button
-                        class="pi-options__color pi-options__color--gray"
-                      ></button>
-                      <button
-                        class="pi-options__color pi-options__color--beige"
-                      ></button>
+                    <label class="pi-options__label">SELECT COLOR</label>
+                    <div class="pi-options__wrapper">
+                      <div class="pi-options__colors">
+                        <button
+                          class="pi-options__color pi-options__color--blue pi-options__color--active"
+                        >
+                          <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            width="24"
+                            height="24"
+                            viewBox="0 0 24 24"
+                            fill="none"
+                          >
+                            <circle
+                              cx="12"
+                              cy="12"
+                              r="11.5"
+                              fill="#0F61FF"
+                              stroke="#EDEDED"
+                            />
+                          </svg>
+                        </button>
+                      </div>
+                      <div class="pi-options__colors">
+                        <button
+                          class="pi-options__color pi-options__color--gray pi-options__color--disable"
+                        >
+                          <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            width="24"
+                            height="24"
+                            viewBox="0 0 24 24"
+                            fill="none"
+                          >
+                            <circle cx="12" cy="12" r="12" fill="#C1C1C1" />
+                          </svg>
+                        </button>
+                      </div>
+                      <div class="pi-options__colors">
+                        <button
+                          class="pi-options__color pi-options__color--beige pi-options__color--disable"
+                        >
+                          <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            width="24"
+                            height="24"
+                            viewBox="0 0 24 24"
+                            fill="none"
+                          >
+                            <circle cx="12" cy="12" r="12" fill="#D9B99B" />
+                          </svg>
+                        </button>
+                      </div>
                     </div>
+                  </div>
+                </div>
+
+                <div class="pi-buttons">
+                  <div class="pi-buttons__group">
+                    <div class="pi-buttons-wrapper">
+                      <button
+                        class="btn btn-change-amount btn-change-amount--decrease"
+                      >
+                        <svg
+                          xmlns="http://www.w3.org/2000/svg"
+                          width="24"
+                          height="24"
+                          viewBox="0 0 24 24"
+                          fill="none"
+                        >
+                          <path
+                            d="M4.78125 12.7819H19.2188C19.426 12.7819 19.6247 12.6996 19.7712 12.553C19.9177 12.4065 20 12.2078 20 12.0006C20 11.7934 19.9177 11.5947 19.7712 11.4482C19.6247 11.3017 19.426 11.2194 19.2188 11.2194H4.78125C4.57405 11.2194 4.37534 11.3017 4.22882 11.4482C4.08231 11.5947 4 11.7934 4 12.0006C4 12.2078 4.08231 12.4065 4.22882 12.553C4.37534 12.6996 4.57405 12.7819 4.78125 12.7819Z"
+                            fill="#0F61FF"
+                          />
+                        </svg>
+                      </button>
+                      <span class="quantity">01</span>
+                      <button
+                        class="btn btn-change-amount btn-change-amount--increase"
+                      >
+                        <svg
+                          xmlns="http://www.w3.org/2000/svg"
+                          width="24"
+                          height="24"
+                          viewBox="0 0 24 24"
+                          fill="none"
+                        >
+                          <path
+                            d="M11.4482 19.7712C11.5947 19.9177 11.7934 20 12.0006 20C12.2078 20 12.4065 19.9177 12.553 19.7712C12.6996 19.6247 12.7819 19.426 12.7819 19.2188V12.7819H19.2188C19.426 12.7819 19.6247 12.6996 19.7712 12.5531C19.9177 12.4066 20 12.2078 20 12.0006C20 11.7934 19.9177 11.5947 19.7712 11.4482C19.6247 11.3017 19.426 11.2194 19.2188 11.2194H12.7819V4.78125C12.7819 4.57405 12.6996 4.37534 12.553 4.22882C12.4065 4.08231 12.2078 4 12.0006 4C11.7934 4 11.5947 4.08231 11.4482 4.22882C11.3017 4.37534 11.2194 4.57405 11.2194 4.78125V11.2194H4.78125C4.57405 11.2194 4.37534 11.3017 4.22882 11.4482C4.08231 11.5947 4 11.7934 4 12.0006C4 12.2078 4.08231 12.4066 4.22882 12.5531C4.37534 12.6996 4.57405 12.7819 4.78125 12.7819H11.2194V19.2188C11.2194 19.426 11.3017 19.6247 11.4482 19.7712Z"
+                            fill="#0F61FF"
+                          />
+                        </svg>
+                      </button>
+                    </div>
+                  </div>
+                  <div class="pi-buttons__group">
+                    <button class="btn btn__buy-now">Buy now</button>
+                    <button class="btn btn__add-to-cart">Add to cart</button>
                   </div>
                 </div>
               </div>
 
-              <div class="pi-explain"></div>
+              <div class="pi-explain">
+                <div class="accordion">
+                  <div class="accordion__item">
+                    <button class="accordion__header">
+                      <h3 class="accordion__title">Main features</h3>
+                      <span class="accordion__icon">+</span>
+                    </button>
+                    <div class="accordion__content">
+                      <p class="accordion__text">
+                        The Bundle includes 1 box, 1 phone case, and 4 screen
+                        wipers or 2 screen protectors for iPhone 15 sizes.
+                      </p>
+                      <ul class="accordion-list">
+                        <li class="accordion-list__item">
+                          Ultra-slim hybrid raised AirLite™ corners for
+                          all-round protection
+                        </li>
+                        <li class="accordion-list__item">
+                          Raised lens bezel to shield back camera
+                        </li>
+                        <li class="accordion-list__item">
+                          Flexible anti-yellowing Bayer TPU bumper for
+                          long-lasting clarity
+                        </li>
+                        <li class="accordion-list__item">
+                          Tough 3H scratch-resistant polycarbonate back
+                        </li>
+                        <li class="accordion-list__item">
+                          Reinforced raised corners to shield against direct
+                          face-down impact
+                        </li>
+                        <li class="accordion-list__item">
+                          Drop-tested to withstand up to 8 feet/2.5 meters
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+
+                  <div class="accordion__item">
+                    <button class="accordion__header">
+                      <h3 class="accordion__title">Materials</h3>
+                      <span class="accordion__icon">+</span>
+                    </button>
+                    <div class="accordion__content">
+                      <p class="accordion__text">
+                        The Bundle includes 1 box, 1 phone case, and 4 screen
+                        wipers or 2 screen protectors for iPhone 15 sizes.
+                      </p>
+                      <ul class="accordion-list">
+                        <li class="accordion-list__item">
+                          Ultra-slim hybrid raised AirLite™ corners for
+                          all-round protection
+                        </li>
+                        <li class="accordion-list__item">
+                          Raised lens bezel to shield back camera
+                        </li>
+                        <li class="accordion-list__item">
+                          Flexible anti-yellowing Bayer TPU bumper for
+                          long-lasting clarity
+                        </li>
+                        <li class="accordion-list__item">
+                          Tough 3H scratch-resistant polycarbonate back
+                        </li>
+                        <li class="accordion-list__item">
+                          Reinforced raised corners to shield against direct
+                          face-down impact
+                        </li>
+                        <li class="accordion-list__item">
+                          Drop-tested to withstand up to 8 feet/2.5 meters
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+
+                  <div class="accordion__item">
+                    <button class="accordion__header">
+                      <h3 class="accordion__title">Shipping & returns</h3>
+                      <span class="accordion__icon">+</span>
+                    </button>
+                    <div class="accordion__content">
+                      <p class="accordion__text">
+                        The Bundle includes 1 box, 1 phone case, and 4 screen
+                        wipers or 2 screen protectors for iPhone 15 sizes.
+                      </p>
+                      <ul class="accordion-list">
+                        <li class="accordion-list__item">
+                          Ultra-slim hybrid raised AirLite™ corners for
+                          all-round protection
+                        </li>
+                        <li class="accordion-list__item">
+                          Raised lens bezel to shield back camera
+                        </li>
+                        <li class="accordion-list__item">
+                          Flexible anti-yellowing Bayer TPU bumper for
+                          long-lasting clarity
+                        </li>
+                        <li class="accordion-list__item">
+                          Tough 3H scratch-resistant polycarbonate back
+                        </li>
+                        <li class="accordion-list__item">
+                          Reinforced raised corners to shield against direct
+                          face-down impact
+                        </li>
+                        <li class="accordion-list__item">
+                          Drop-tested to withstand up to 8 feet/2.5 meters
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+
+                  <div class="accordion__item">
+                    <button class="accordion__header">
+                      <h3 class="accordion__title">Care guide</h3>
+                      <span class="accordion__icon">+</span>
+                    </button>
+                    <div class="accordion__content">
+                      <p class="accordion__text">
+                        The Bundle includes 1 box, 1 phone case, and 4 screen
+                        wipers or 2 screen protectors for iPhone 15 sizes.
+                      </p>
+                      <ul class="accordion-list">
+                        <li class="accordion-list__item">
+                          Ultra-slim hybrid raised AirLite™ corners for
+                          all-round protection
+                        </li>
+                        <li class="accordion-list__item">
+                          Raised lens bezel to shield back camera
+                        </li>
+                        <li class="accordion-list__item">
+                          Flexible anti-yellowing Bayer TPU bumper for
+                          long-lasting clarity
+                        </li>
+                        <li class="accordion-list__item">
+                          Tough 3H scratch-resistant polycarbonate back
+                        </li>
+                        <li class="accordion-list__item">
+                          Reinforced raised corners to shield against direct
+                          face-down impact
+                        </li>
+                        <li class="accordion-list__item">
+                          Drop-tested to withstand up to 8 feet/2.5 meters
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
