--- a/showall.html
+++ b/showall.html
@@ -123,7 +123,7 @@
           </div>
         </div>
       </header>
-      <section class="page-section bg-image product-hero">
+      <section class="page-sectionpage-section--img product-hero">
         <div class="product-hero__title">
           <h1>Shop All</h1>
         </div>
@@ -271,16 +271,28 @@
                   <div class="product-card__img">
                     <img src="public/assets/products/product1.png" alt="" />
                   </div>
-                  <div class="product-card__info">
+                  <div class="product-info">
                     <div class="product-card__name">
                       <h3>Hills</h3>
                     </div>
                     <div class="product-card__price"><h3>$76</h3></div>
-                    <div class="produc-card__option">
-                      <div class="product-option color-1"></div>
-                      <div class="product-option color-2"></div>
-                      <div class="product-option color-3"></div>
-                      <div class="product-option color-4"></div>
+                    <div class="product-option">
+                      <div
+                        class="product-option__item"
+                        style="--color: #c9bfae"
+                      ></div>
+                      <div
+                        class="product-option__item"
+                        style="--color: #a393b5"
+                      ></div>
+                      <div
+                        class="product-option__item"
+                        style="--color: #ec978c"
+                      ></div>
+                      <div
+                        class="product-option__item"
+                        style="--color: #ec978c"
+                      ></div>
                     </div>
                   </div>
                 </div>
@@ -290,16 +302,28 @@
                   <div class="product-card__img">
                     <img src="public/assets/products/product1.png" alt="" />
                   </div>
-                  <div class="product-card__info">
+                  <div class="product-info">
                     <div class="product-card__name">
                       <h3>Hills</h3>
                     </div>
                     <div class="product-card__price"><h3>$76</h3></div>
-                    <div class="produc-card__option">
-                      <div class="product-option color-1"></div>
-                      <div class="product-option color-2"></div>
-                      <div class="product-option color-3"></div>
-                      <div class="product-option color-4"></div>
+                    <div class="product-option">
+                      <div
+                        class="product-option__item"
+                        style="--color: #c9bfae"
+                      ></div>
+                      <div
+                        class="product-option__item"
+                        style="--color: #a393b5"
+                      ></div>
+                      <div
+                        class="product-option__item"
+                        style="--color: #ec978c"
+                      ></div>
+                      <div
+                        class="product-option__item"
+                        style="--color: #ec978c"
+                      ></div>
                     </div>
                   </div>
                 </div>
@@ -309,16 +333,28 @@
                   <div class="product-card__img">
                     <img src="public/assets/products/product1.png" alt="" />
                   </div>
-                  <div class="product-card__info">
+                  <div class="product-info">
                     <div class="product-card__name">
                       <h3>Hills</h3>
                     </div>
                     <div class="product-card__price"><h3>$76</h3></div>
-                    <div class="produc-card__option">
-                      <div class="product-option color-1"></div>
-                      <div class="product-option color-2"></div>
-                      <div class="product-option color-3"></div>
-                      <div class="product-option color-4"></div>
+                    <div class="product-option">
+                      <div
+                        class="product-option__item"
+                        style="--color: #c9bfae"
+                      ></div>
+                      <div
+                        class="product-option__item"
+                        style="--color: #a393b5"
+                      ></div>
+                      <div
+                        class="product-option__item"
+                        style="--color: #ec978c"
+                      ></div>
+                      <div
+                        class="product-option__item"
+                        style="--color: #ec978c"
+                      ></div>
                     </div>
                   </div>
                 </div>
@@ -328,16 +364,28 @@
                   <div class="product-card__img">
                     <img src="public/assets/products/product1.png" alt="" />
                   </div>
-                  <div class="product-card__info">
+                  <div class="product-info">
                     <div class="product-card__name">
                       <h3>Hills</h3>
                     </div>
                     <div class="product-card__price"><h3>$76</h3></div>
-                    <div class="produc-card__option">
-                      <div class="product-option color-1"></div>
-                      <div class="product-option color-2"></div>
-                      <div class="product-option color-3"></div>
-                      <div class="product-option color-4"></div>
+                    <div class="product-option">
+                      <div
+                        class="product-option__item"
+                        style="--color: #c9bfae"
+                      ></div>
+                      <div
+                        class="product-option__item"
+                        style="--color: #a393b5"
+                      ></div>
+                      <div
+                        class="product-option__item"
+                        style="--color: #ec978c"
+                      ></div>
+                      <div
+                        class="product-option__item"
+                        style="--color: #ec978c"
+                      ></div>
                     </div>
                   </div>
                 </div>
@@ -347,16 +395,28 @@
                   <div class="product-card__img">
                     <img src="public/assets/products/product1.png" alt="" />
                   </div>
-                  <div class="product-card__info">
+                  <div class="product-info">
                     <div class="product-card__name">
                       <h3>Hills</h3>
                     </div>
                     <div class="product-card__price"><h3>$76</h3></div>
-                    <div class="produc-card__option">
-                      <div class="product-option color-1"></div>
-                      <div class="product-option color-2"></div>
-                      <div class="product-option color-3"></div>
-                      <div class="product-option color-4"></div>
+                    <div class="product-option">
+                      <div
+                        class="product-option__item"
+                        style="--color: #c9bfae"
+                      ></div>
+                      <div
+                        class="product-option__item"
+                        style="--color: #a393b5"
+                      ></div>
+                      <div
+                        class="product-option__item"
+                        style="--color: #ec978c"
+                      ></div>
+                      <div
+                        class="product-option__item"
+                        style="--color: #ec978c"
+                      ></div>
                     </div>
                   </div>
                 </div>
@@ -366,16 +426,28 @@
                   <div class="product-card__img">
                     <img src="public/assets/products/product1.png" alt="" />
                   </div>
-                  <div class="product-card__info">
+                  <div class="product-info">
                     <div class="product-card__name">
                       <h3>Hills</h3>
                     </div>
                     <div class="product-card__price"><h3>$76</h3></div>
-                    <div class="produc-card__option">
-                      <div class="product-option color-1"></div>
-                      <div class="product-option color-2"></div>
-                      <div class="product-option color-3"></div>
-                      <div class="product-option color-4"></div>
+                    <div class="product-option">
+                      <div
+                        class="product-option__item"
+                        style="--color: #c9bfae"
+                      ></div>
+                      <div
+                        class="product-option__item"
+                        style="--color: #a393b5"
+                      ></div>
+                      <div
+                        class="product-option__item"
+                        style="--color: #ec978c"
+                      ></div>
+                      <div
+                        class="product-option__item"
+                        style="--color: #ec978c"
+                      ></div>
                     </div>
                   </div>
                 </div>
@@ -385,16 +457,28 @@
                   <div class="product-card__img">
                     <img src="public/assets/products/product1.png" alt="" />
                   </div>
-                  <div class="product-card__info">
+                  <div class="product-info">
                     <div class="product-card__name">
                       <h3>Hills</h3>
                     </div>
                     <div class="product-card__price"><h3>$76</h3></div>
-                    <div class="produc-card__option">
-                      <div class="product-option color-1"></div>
-                      <div class="product-option color-2"></div>
-                      <div class="product-option color-3"></div>
-                      <div class="product-option color-4"></div>
+                    <div class="product-option">
+                      <div
+                        class="product-option__item"
+                        style="--color: #c9bfae"
+                      ></div>
+                      <div
+                        class="product-option__item"
+                        style="--color: #a393b5"
+                      ></div>
+                      <div
+                        class="product-option__item"
+                        style="--color: #ec978c"
+                      ></div>
+                      <div
+                        class="product-option__item"
+                        style="--color: #ec978c"
+                      ></div>
                     </div>
                   </div>
                 </div>
@@ -404,16 +488,28 @@
                   <div class="product-card__img">
                     <img src="public/assets/products/product1.png" alt="" />
                   </div>
-                  <div class="product-card__info">
+                  <div class="product-info">
                     <div class="product-card__name">
                       <h3>Hills</h3>
                     </div>
                     <div class="product-card__price"><h3>$76</h3></div>
-                    <div class="produc-card__option">
-                      <div class="product-option color-1"></div>
-                      <div class="product-option color-2"></div>
-                      <div class="product-option color-3"></div>
-                      <div class="product-option color-4"></div>
+                    <div class="product-option">
+                      <div
+                        class="product-option__item"
+                        style="--color: #c9bfae"
+                      ></div>
+                      <div
+                        class="product-option__item"
+                        style="--color: #a393b5"
+                      ></div>
+                      <div
+                        class="product-option__item"
+                        style="--color: #ec978c"
+                      ></div>
+                      <div
+                        class="product-option__item"
+                        style="--color: #ec978c"
+                      ></div>
                     </div>
                   </div>
                 </div>
@@ -423,16 +519,28 @@
                   <div class="product-card__img">
                     <img src="public/assets/products/product1.png" alt="" />
                   </div>
-                  <div class="product-card__info">
+                  <div class="product-info">
                     <div class="product-card__name">
                       <h3>Hills</h3>
                     </div>
                     <div class="product-card__price"><h3>$76</h3></div>
-                    <div class="produc-card__option">
-                      <div class="product-option color-1"></div>
-                      <div class="product-option color-2"></div>
-                      <div class="product-option color-3"></div>
-                      <div class="product-option color-4"></div>
+                    <div class="product-option">
+                      <div
+                        class="product-option__item"
+                        style="--color: #c9bfae"
+                      ></div>
+                      <div
+                        class="product-option__item"
+                        style="--color: #a393b5"
+                      ></div>
+                      <div
+                        class="product-option__item"
+                        style="--color: #ec978c"
+                      ></div>
+                      <div
+                        class="product-option__item"
+                        style="--color: #ec978c"
+                      ></div>
                     </div>
                   </div>
                 </div>
@@ -442,16 +550,28 @@
                   <div class="product-card__img">
                     <img src="public/assets/products/product1.png" alt="" />
                   </div>
-                  <div class="product-card__info">
+                  <div class="product-info">
                     <div class="product-card__name">
                       <h3>Hills</h3>
                     </div>
                     <div class="product-card__price"><h3>$76</h3></div>
-                    <div class="produc-card__option">
-                      <div class="product-option color-1"></div>
-                      <div class="product-option color-2"></div>
-                      <div class="product-option color-3"></div>
-                      <div class="product-option color-4"></div>
+                    <div class="product-option">
+                      <div
+                        class="product-option__item"
+                        style="--color: #c9bfae"
+                      ></div>
+                      <div
+                        class="product-option__item"
+                        style="--color: #a393b5"
+                      ></div>
+                      <div
+                        class="product-option__item"
+                        style="--color: #ec978c"
+                      ></div>
+                      <div
+                        class="product-option__item"
+                        style="--color: #ec978c"
+                      ></div>
                     </div>
                   </div>
                 </div>
@@ -461,16 +581,28 @@
                   <div class="product-card__img">
                     <img src="public/assets/products/product1.png" alt="" />
                   </div>
-                  <div class="product-card__info">
+                  <div class="product-info">
                     <div class="product-card__name">
                       <h3>Hills</h3>
                     </div>
                     <div class="product-card__price"><h3>$76</h3></div>
-                    <div class="produc-card__option">
-                      <div class="product-option color-1"></div>
-                      <div class="product-option color-2"></div>
-                      <div class="product-option color-3"></div>
-                      <div class="product-option color-4"></div>
+                    <div class="product-option">
+                      <div
+                        class="product-option__item"
+                        style="--color: #c9bfae"
+                      ></div>
+                      <div
+                        class="product-option__item"
+                        style="--color: #a393b5"
+                      ></div>
+                      <div
+                        class="product-option__item"
+                        style="--color: #ec978c"
+                      ></div>
+                      <div
+                        class="product-option__item"
+                        style="--color: #ec978c"
+                      ></div>
                     </div>
                   </div>
                 </div>
@@ -480,16 +612,28 @@
                   <div class="product-card__img">
                     <img src="public/assets/products/product1.png" alt="" />
                   </div>
-                  <div class="product-card__info">
+                  <div class="product-info">
                     <div class="product-card__name">
                       <h3>Hills</h3>
                     </div>
                     <div class="product-card__price"><h3>$76</h3></div>
-                    <div class="produc-card__option">
-                      <div class="product-option color-1"></div>
-                      <div class="product-option color-2"></div>
-                      <div class="product-option color-3"></div>
-                      <div class="product-option color-4"></div>
+                    <div class="product-option">
+                      <div
+                        class="product-option__item"
+                        style="--color: #c9bfae"
+                      ></div>
+                      <div
+                        class="product-option__item"
+                        style="--color: #a393b5"
+                      ></div>
+                      <div
+                        class="product-option__item"
+                        style="--color: #ec978c"
+                      ></div>
+                      <div
+                        class="product-option__item"
+                        style="--color: #ec978c"
+                      ></div>
                     </div>
                   </div>
                 </div>
