--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
           </div>
         </div>
       </section>
-      <section class="page-section bg-color--1">
+      <section class="page-section bg-color">
         <div class="container-xxl multi-container">
           <h2 class="multi__tittle">Extreme Cases MagSafe Compatible</h2>
           <div class="multi__line"></div>
