--- a/showall.html
+++ b/showall.html
@@ -139,7 +139,7 @@
           </div>
           <div class="cate-body">
             <div class="cate__items">
-              <div class="cate__item">
+              <div class="cate__item cate__item--active">
                 <img
                   src="./public/assets/product-page/category/ipCase.png"
                   alt="Case Iphone"
