--- a/productdetail.html
+++ b/productdetail.html
@@ -532,7 +532,7 @@
         </div>
       </section>
 
-      <section class="page-section bg-color--1">
+      <section class="page-section bg-color">
         <div class="container-xxl multi-container">
           <h2 class="multi__tittle">Extreme Cases MagSafe Compatible</h2>
           <div class="multi__line"></div>
