--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           </div>
           <div class="nav">
             <ul class="nav-list nav-list--text">
-              <li><a href="#">New & Featured</a></li>
+              <li><a href="button.html">New & Featured</a></li>
               <li><a href="#">Collection</a></li>
               <li><a href="#">Customize</a></li>
               <li><a href="#">About us</a></li>
@@ -137,7 +137,11 @@
                 <div class="product-card">
                   <div class="product-card__img">
                     <a href="productdetail.html"
-                      ><img src="public/assets/products/product1.png" alt=""
+                      ><img
+                        src="public/assets/products/product1.png"
+                        alt="" /><img
+                        src="public/assets/products/product2.png"
+                        alt=""
                     /></a>
                   </div>
                   <div class="product-info">
@@ -169,7 +173,15 @@
               <div class="col" style="--col-lg: 3; --col-md: 6">
                 <div class="product-card">
                   <div class="product-card__img">
-                    <img src="public/assets/products/product1.png" alt="" />
+                    <a href="productdetail.html"
+                      ><a href="productdetail.html"
+                        ><img
+                          src="public/assets/products/product1.png"
+                          alt="" /><img
+                          src="public/assets/products/product2.png"
+                          alt=""
+                      /></a>
+                    </a>
                   </div>
                   <div class="product-info">
                     <div class="product-info__name">
@@ -200,7 +212,13 @@
               <div class="col" style="--col-lg: 3; --col-md: 6">
                 <div class="product-card">
                   <div class="product-card__img">
-                    <img src="public/assets/products/product1.png" alt="" />
+                    <a href="productdetail.html"
+                      ><img
+                        src="public/assets/products/product1.png"
+                        alt="" /><img
+                        src="public/assets/products/product2.png"
+                        alt=""
+                    /></a>
                   </div>
                   <div class="product-info">
                     <div class="product-info__name">
@@ -231,7 +249,15 @@
               <div class="col" style="--col-lg: 3; --col-md: 6">
                 <div class="product-card">
                   <div class="product-card__img">
-                    <img src="public/assets/products/product1.png" alt="" />
+                    <a href="productdetail.html"
+                      ><a href="productdetail.html"
+                        ><img
+                          src="public/assets/products/product1.png"
+                          alt="" /><img
+                          src="public/assets/products/product2.png"
+                          alt=""
+                      /></a>
+                    </a>
                   </div>
                   <div class="product-info">
                     <div class="product-info__name">
@@ -263,7 +289,7 @@
             <div class="seller__banner">
               <img src="./public/assets/products/Change Img.png" alt="" />
               <div class="btn-sa btn-sa--large">
-                <a href="showall.html">Shop all</a>
+                <a class="btn btn-style--01" href="showall.html">Shop all</a>
               </div>
             </div>
           </div>
@@ -387,7 +413,13 @@
                 <div class="col" style="--col-lg: 6; --col-md: 6">
                   <div class="product-card">
                     <div class="product-card__img">
-                      <img src="public/assets/products/product1.png" alt="" />
+                      <a href="productdetail.html"
+                        ><img
+                          src="public/assets/products/product1.png"
+                          alt="" /><img
+                          src="public/assets/products/product2.png"
+                          alt=""
+                      /></a>
                     </div>
                     <div class="product-info">
                       <div class="product-info__name">
@@ -418,7 +450,13 @@
                 <div class="col" style="--col-lg: 6; --col-md: 6">
                   <div class="product-card">
                     <div class="product-card__img">
-                      <img src="public/assets/products/product1.png" alt="" />
+                      <a href="productdetail.html"
+                        ><img
+                          src="public/assets/products/product1.png"
+                          alt="" /><img
+                          src="public/assets/products/product2.png"
+                          alt=""
+                      /></a>
                     </div>
                     <div class="product-info">
                       <div class="product-info__name">
@@ -449,7 +487,13 @@
                 <div class="col" style="--col-lg: 6; --col-md: 6">
                   <div class="product-card">
                     <div class="product-card__img">
-                      <img src="public/assets/products/product1.png" alt="" />
+                      <a href="productdetail.html"
+                        ><img
+                          src="public/assets/products/product1.png"
+                          alt="" /><img
+                          src="public/assets/products/product2.png"
+                          alt=""
+                      /></a>
                     </div>
                     <div class="product-info">
                       <div class="product-info__name">
@@ -480,7 +524,13 @@
                 <div class="col" style="--col-lg: 6; --col-md: 6">
                   <div class="product-card">
                     <div class="product-card__img">
-                      <img src="public/assets/products/product1.png" alt="" />
+                      <a href="productdetail.html"
+                        ><img
+                          src="public/assets/products/product1.png"
+                          alt="" /><img
+                          src="public/assets/products/product2.png"
+                          alt=""
+                      /></a>
                     </div>
                     <div class="product-info">
                       <div class="product-info__name">
@@ -513,7 +563,13 @@
                 <div class="col" style="--col-lg: 6, --col-md: 6">
                   <div class="product-card">
                     <div class="product-card__img">
-                      <img src="public/assets/products/product1.png" alt="" />
+                      <a href="productdetail.html"
+                      ><img
+                        src="public/assets/products/product1.png"
+                        alt="" /><img
+                        src="public/assets/products/product2.png"
+                        alt=""
+                    /></a>
                     </div>
                     <div class="product-info">
                       <div class="product-info__name">
@@ -532,7 +588,13 @@
                 <div class="col" style="--col-lg: 6, --col-md: 6">
                   <div class="product-card">
                     <div class="product-card__img">
-                      <img src="public/assets/products/product1.png" alt="" />
+                      <a href="productdetail.html"
+                      ><img
+                        src="public/assets/products/product1.png"
+                        alt="" /><img
+                        src="public/assets/products/product2.png"
+                        alt=""
+                    /></a>
                     </div>
                     <div class="product-info">
                       <div class="product-info__name">
@@ -551,7 +613,13 @@
                 <div class="col" style="--col-lg: 6, --col-md: 6">
                   <div class="product-card">
                     <div class="product-card__img">
-                      <img src="public/assets/products/product1.png" alt="" />
+                      <a href="productdetail.html"
+                      ><img
+                        src="public/assets/products/product1.png"
+                        alt="" /><img
+                        src="public/assets/products/product2.png"
+                        alt=""
+                    /></a>
                     </div>
                     <div class="product-info">
                       <div class="product-info__name">
@@ -570,7 +638,13 @@
                 <div class="col" style="--col-lg: 6, --col-md: 6">
                   <div class="product-card">
                     <div class="product-card__img">
-                      <img src="public/assets/products/product1.png" alt="" />
+                      <a href="productdetail.html"
+                      ><img
+                        src="public/assets/products/product1.png"
+                        alt="" /><img
+                        src="public/assets/products/product2.png"
+                        alt=""
+                    /></a>
                     </div>
                     <div class="product-info">
                       <div class="product-info__name">
@@ -635,7 +709,9 @@
             <div class="review-content__img review-content__img--3">
               <img src="./public/assets/review/cus3.png" alt="" />
             </div>
-            <div class="review-content__img review-content__img--4">
+            <div
+              class="review-content__img review-content__img--4 review-content__img--active"
+            >
               <img src="./public/assets/review/cus4.png" alt="" />
             </div>
             <div class="review-content__img review-content__img--5">
@@ -647,6 +723,15 @@
             <div class="review-content__img review-content__img--7">
               <img src="./public/assets/review/cus7.png" alt="" />
             </div>
+
+            <div class="review-content__text">
+              <p>
+                “This means that once you use different template designs for
+                actual testimonial website widgets, you can make images from
+                them and post them as image.”
+              </p>
+              <span>Johny Angelo</span>
+            </div>
           </div>
         </div>
       </section>
@@ -657,7 +742,7 @@
               <div class="cl-card">
                 <div class="cl-card__title">
                   <h2>Super Protect</h2>
-                  <div class="btn-sa btn-sa--large">
+                  <div class="btn-sa btn-sa--large btn-sa--hidden">
                     <a href="#">Shop All</a>
                   </div>
                 </div>
@@ -811,5 +896,15 @@
         </div>
       </footer>
     </div>
+
+    <script>
+      document
+        .querySelector(".review-content__img--active")
+        .addEventListener("click", function () {
+          document
+            .querySelector(".review-content__text")
+            .classList.toggle("active");
+        });
+    </script>
   </body>
 </html>
