--- a/showall.html
+++ b/showall.html
@@ -269,7 +269,13 @@
               <div class="col" style="--col-lg: 3; --col-md: 6">
                 <div class="product-card">
                   <div class="product-card__img">
-                    <img src="public/assets/products/product1.png" alt="" />
+                    <a href="productdetail.html"
+                      ><img
+                        src="public/assets/products/product1.png"
+                        alt="" /><img
+                        src="public/assets/products/product2.png"
+                        alt=""
+                    /></a>
                   </div>
                   <div class="product-info">
                     <div class="product-card__name">
@@ -300,7 +306,13 @@
               <div class="col" style="--col-lg: 3; --col-md: 6">
                 <div class="product-card">
                   <div class="product-card__img">
-                    <img src="public/assets/products/product1.png" alt="" />
+                    <a href="productdetail.html"
+                      ><img
+                        src="public/assets/products/product1.png"
+                        alt="" /><img
+                        src="public/assets/products/product2.png"
+                        alt=""
+                    /></a>
                   </div>
                   <div class="product-info">
                     <div class="product-card__name">
@@ -331,7 +343,13 @@
               <div class="col" style="--col-lg: 3; --col-md: 6">
                 <div class="product-card">
                   <div class="product-card__img">
-                    <img src="public/assets/products/product1.png" alt="" />
+                    <a href="productdetail.html"
+                      ><img
+                        src="public/assets/products/product1.png"
+                        alt="" /><img
+                        src="public/assets/products/product2.png"
+                        alt=""
+                    /></a>
                   </div>
                   <div class="product-info">
                     <div class="product-card__name">
@@ -362,7 +380,13 @@
               <div class="col" style="--col-lg: 3; --col-md: 6">
                 <div class="product-card">
                   <div class="product-card__img">
-                    <img src="public/assets/products/product1.png" alt="" />
+                    <a href="productdetail.html"
+                      ><img
+                        src="public/assets/products/product1.png"
+                        alt="" /><img
+                        src="public/assets/products/product2.png"
+                        alt=""
+                    /></a>
                   </div>
                   <div class="product-info">
                     <div class="product-card__name">
@@ -393,7 +417,13 @@
               <div class="col" style="--col-lg: 3; --col-md: 6">
                 <div class="product-card">
                   <div class="product-card__img">
-                    <img src="public/assets/products/product1.png" alt="" />
+                    <a href="productdetail.html"
+                      ><img
+                        src="public/assets/products/product1.png"
+                        alt="" /><img
+                        src="public/assets/products/product2.png"
+                        alt=""
+                    /></a>
                   </div>
                   <div class="product-info">
                     <div class="product-card__name">
@@ -424,7 +454,13 @@
               <div class="col" style="--col-lg: 3; --col-md: 6">
                 <div class="product-card">
                   <div class="product-card__img">
-                    <img src="public/assets/products/product1.png" alt="" />
+                    <a href="productdetail.html"
+                      ><img
+                        src="public/assets/products/product1.png"
+                        alt="" /><img
+                        src="public/assets/products/product2.png"
+                        alt=""
+                    /></a>
                   </div>
                   <div class="product-info">
                     <div class="product-card__name">
@@ -455,7 +491,13 @@
               <div class="col" style="--col-lg: 3; --col-md: 6">
                 <div class="product-card">
                   <div class="product-card__img">
-                    <img src="public/assets/products/product1.png" alt="" />
+                    <a href="productdetail.html"
+                      ><img
+                        src="public/assets/products/product1.png"
+                        alt="" /><img
+                        src="public/assets/products/product2.png"
+                        alt=""
+                    /></a>
                   </div>
                   <div class="product-info">
                     <div class="product-card__name">
@@ -486,7 +528,13 @@
               <div class="col" style="--col-lg: 3; --col-md: 6">
                 <div class="product-card">
                   <div class="product-card__img">
-                    <img src="public/assets/products/product1.png" alt="" />
+                    <a href="productdetail.html"
+                      ><img
+                        src="public/assets/products/product1.png"
+                        alt="" /><img
+                        src="public/assets/products/product2.png"
+                        alt=""
+                    /></a>
                   </div>
                   <div class="product-info">
                     <div class="product-card__name">
@@ -517,7 +565,13 @@
               <div class="col" style="--col-lg: 3; --col-md: 6">
                 <div class="product-card">
                   <div class="product-card__img">
-                    <img src="public/assets/products/product1.png" alt="" />
+                    <a href="productdetail.html"
+                      ><img
+                        src="public/assets/products/product1.png"
+                        alt="" /><img
+                        src="public/assets/products/product2.png"
+                        alt=""
+                    /></a>
                   </div>
                   <div class="product-info">
                     <div class="product-card__name">
@@ -548,7 +602,13 @@
               <div class="col" style="--col-lg: 3; --col-md: 6">
                 <div class="product-card">
                   <div class="product-card__img">
-                    <img src="public/assets/products/product1.png" alt="" />
+                    <a href="productdetail.html"
+                      ><img
+                        src="public/assets/products/product1.png"
+                        alt="" /><img
+                        src="public/assets/products/product2.png"
+                        alt=""
+                    /></a>
                   </div>
                   <div class="product-info">
                     <div class="product-card__name">
@@ -579,7 +639,13 @@
               <div class="col" style="--col-lg: 3; --col-md: 6">
                 <div class="product-card">
                   <div class="product-card__img">
-                    <img src="public/assets/products/product1.png" alt="" />
+                    <a href="productdetail.html"
+                      ><img
+                        src="public/assets/products/product1.png"
+                        alt="" /><img
+                        src="public/assets/products/product2.png"
+                        alt=""
+                    /></a>
                   </div>
                   <div class="product-info">
                     <div class="product-card__name">
@@ -610,7 +676,13 @@
               <div class="col" style="--col-lg: 3; --col-md: 6">
                 <div class="product-card">
                   <div class="product-card__img">
-                    <img src="public/assets/products/product1.png" alt="" />
+                    <a href="productdetail.html"
+                      ><img
+                        src="public/assets/products/product1.png"
+                        alt="" /><img
+                        src="public/assets/products/product2.png"
+                        alt=""
+                    /></a>
                   </div>
                   <div class="product-info">
                     <div class="product-card__name">
